<resources>
    <string name="app_name">Learning</string>
    <string name="ui">UI</string>

    <!--TextViewActivity-->
    <string name="tv_test1">我在学习Android!</string>
    <string name="tv_test2">筛选</string>
    <string name="tv_test3">我在学习Android!我在学习Android!我在学习Android!我在学习Android!我在学习Android!我在学习Android!我在学习Android!</string>

    <!--ButtonActivity-->
    <string name="btn_button_1">按钮1</string>
    <string name="btn_button_2">按钮2</string>
    <string name="btn_button_3">按钮3</string>
    <string name="btn_button_4">按钮4</string>
    <string name="tv_button_1">文字1</string>

    <!--EditTextActivity-->
    <string name="et_username">用户名</string>
    <string name="et_password">密码</string>
    <string name="btn_login">登录</string>

    <!--RadioButtonActivity-->
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>

    <!--CheckBoxActivity-->
    <string name="tv_title">你会那些移动开发？</string>
    <string name="cb_android">Android</string>
    <string name="cb_ios">iOS</string>
    <string name="cb_h5">H5</string>
    <string name="cb_other">其它</string>
    <string name="tv_result">你的兴趣：</string>
    <string name="btn_image_view">ImageView</string>
    <string name="btn_listview">ListView</string>
    <string name="btn_gridview">GridView</string>
    <string name="btn_recyclerview">RecyclerView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_party_lab">Third-party Lib</string>
    <string name="event">Event</string>
    <string name="navigationContentDescription">返回</string>

</resources>