<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/globalPadding">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_button_1"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="#FF0000"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_button_2"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_btn2"
        android:layout_below="@id/btn_1"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_button_3"
        android:textSize="24sp"
        android:textColor="#FE9A2E"
        android:background="@drawable/bg_btn3"
        android:layout_below="@id/btn_2"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_button_4"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_selector_orange"
        android:layout_below="@id/btn_3"
        android:onClick="showToast"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/btn_tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_button_1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_below="@id/btn_4"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

</RelativeLayout>