<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_username"
        android:hint="@string/et_username"
        android:textColor="#FFDD33"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="5dp"
        android:layout_marginTop="50dp"
        android:maxLines="1"
        android:drawableLeft="@drawable/icon_username"
        android:drawableStart="@drawable/icon_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="#FFAD33"
        android:background="@drawable/bg_username"
        android:inputType="textPassword"
        android:hint="@string/et_password"
        android:layout_below="@id/et_username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:maxLines="1"
        android:drawableLeft="@drawable/icon_password"
        android:drawableStart="@drawable/icon_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_selector_orange"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

</RelativeLayout>